@@ -13,6 +13,22 @@ namespace scene
 {
 	class IMesh;
 
+	enum ESHADOWVOLUME_OPTIMIZATION
+	{
+		//! Create volumes around every triangle
+		ESV_NONE,
+
+		//! Create volumes only around the silhouette of the mesh
+		/** This can reduce the number of volumes drastically,
+		but will have an upfront-cost where it calculates adjacency of
+		triangles. Also it will not work with all models. Basically
+		if you see strange black shadow lines then you have a model
+		for which it won't work.
+		We get that information about adjacency by comparing the positions of 
+		all edges in the mesh (even if they are in different meshbuffers). */
+		ESV_SILHOUETTE_BY_POS
+	};
+
 	//! Scene node for rendering a shadow volume into a stencil buffer.
 	class IShadowVolumeSceneNode : public ISceneNode
 	{
@@ -29,6 +45,17 @@ namespace scene
 
 		//! Updates the shadow volumes for current light positions.
 		virtual void updateShadowVolumes() = 0;
+
+		//! Set optimization used to create shadow volumes
+		/** Default is ESV_SILHOUETTE_BY_POS. If the shadow 
+		looks bad then give ESV_NONE a try (which will be slower). 
+		Alternatively you can try to fix the model, it's often
+		because it's not closed (aka if you'd put water in it then 
+		that would leak out). */
+		virtual void setOptimization(ESHADOWVOLUME_OPTIMIZATION optimization) = 0;
+
+		//! Get currently active optimization used to create shadow volumes
+		virtual ESHADOWVOLUME_OPTIMIZATION getOptimization() const = 0;
 	};
 
 } // end namespace scene
